# coding-agent-telegram

./: .env.example  .gitignore  README.de.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.nl.md  README.th.md  README.vi.md  README.zh-CN.md  README.zh-HK.md  README.zh-TW.md  install-stt.sh  install.sh  pyproject.toml  setup.py  startup.sh
.github/workflows/: pull-request-checks.yml  python-publish.yml  testpypi-publish.yml
src/coding_agent_telegram/: __init__.py  __main__.py  agent_runner.py  bot.py  cli.py  command_router.py  config.py  diff_utils.py  filters.py  git_utils.py  i18n.py  logging_utils.py  native_codex_sessions.py  native_copilot_sessions.py  native_session_types.py  native_session_utils.py  native_sessions.py  session_runtime.py  session_store.py  speech_to_text.py  stt_setup.py  telegram_sender.py
src/coding_agent_telegram/resources/: .env.example  secret_scrub_patterns.properties  sensitive_path_globs.txt  snapshot_excluded_dir_globs.txt  snapshot_excluded_dir_names.txt  snapshot_excluded_file_globs.txt
src/coding_agent_telegram/router/: base.py  git_commands.py  message_commands.py  project_commands.py  queue_processing.py  session_branch_resolution.py  session_commands.py  session_common.py  session_lifecycle_commands.py  session_provider_commands.py  session_status_commands.py  (+1 more)
tests/: test_agent_runner.py  test_agent_runner_stall.py  test_bot.py  test_command_router.py  test_config.py  test_diff_chunking.py  test_filters.py  test_git_utils.py  test_i18n.py  test_logging_utils.py  test_native_session_utils.py  test_native_sessions.py  test_project_validation.py  test_session_runtime_diff_merge.py  test_session_runtime_security.py  test_session_store.py  test_speech_to_text.py  test_stt_setup.py  test_telegram_sender.py
(+11 files in other folders)
