[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-agent-telegram"
version = "2026.03.26-2"
description = "Telegram bot bridge for local coding agents (Codex/Copilot CLI)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "DCHA" }]
dependencies = [
  "python-telegram-bot>=21.0,<22.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "portalocker>=2.8.2,<3.0.0",
]

[project.scripts]
coding-agent-telegram = "coding_agent_telegram.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
coding_agent_telegram = [
  "resources/.env.example",
  "resources/sensitive_path_globs.txt",
  "resources/snapshot_excluded_dir_names.txt",
  "resources/snapshot_excluded_dir_globs.txt",
  "resources/snapshot_excluded_file_globs.txt",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
